--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "generate/vscode-icons"]
-	path = generate/vscode-icons
-	url = https://github.com/catppuccin/vscode-icons.git
+[submodule "generate/vscode-material-icon-theme"]
+	path = generate/vscode-material-icon-theme
+	url = https://github.com/MouseChannel/vscode-material-icon-theme
