--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-pluginGroup=com.github.catppuccin.jetbrains_icons
-pluginName=Catppuccin Icons
-pluginVersion=1.11.0
+pluginGroup=com.github.mousechannel.jetbrains_icons
+pluginName=MouseChannel Icon
+pluginVersion=1.10.1
 pluginSinceBuild=231
 pluginUntilBuild=251.*
 platformType=IC
