--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -3,34 +3,8 @@
   <name>MOuseChannel Icons</name>
   <vendor url="https://github.com/MouseChannel">MouseChannel</vendor>
   <description><![CDATA[
-<h2>🦊 Soothing pastel icons for JetBrains IDEs</h2>
-
-<p>
-This is an <strong>icon pack</strong> designed to be used with the <a href="https://plugins.jetbrains.com/plugin/18682-catppuccin-theme" target="_blank">Catppuccin Theme</a></li> extension.
-</p>
-
-<h3>Usage</h3>
-
-<ol>
-<!--  <li>Head to <strong>Settings</strong> → <strong>Appearance & Behavior</strong> → <strong>Catppuccin Icons</strong></li>-->
-  <li>Head to <strong>Settings</strong> → <strong>Appearance & Behavior</strong> → <strong>Catppuccin Icons</strong></li>
-
-  <li>Select a flavor for the icons to use.</li>
-  <li>Restart your IDE.</li>
-  <li>Enjoy your new icons!</li>
-</ol>
-
-<h3>Help</h3>
-
-For further help, see also:
-
-<ul>
-  <li><a href="https://github.com/catppuccin/jetbrains-icons" target="_blank">GitHub Repository</a></li>
-  <li><a href="https://github.com/catppuccin/jetbrains-icons/issues?q=is%3Aissue+is%3Aopen+sort%3Aupdated-desc" target="_blank">Issue Tracker</a></li>
-</ul>
-
-<p>Copyright &copy; 2023-present <a href="https://github.com/catppuccin" target="_blank">Catppuccin Org</a>
-<p>LICENSE: <a href="https://github.com/catppuccin/jetbrains-icons/blob/main/LICENSE">MIT</a></p>
+<h2>Mousechanel Icons</h2>
+same as   <li><a href="https://github.com/MouseChannel/vscode-material-icon-theme" target="_blank">mousechannel vscode icons</a></li>
 ]]></description>
   <depends>com.intellij.modules.platform</depends>
   <depends optional="true" config-file="com.github.catppuccin.jetbrains_icons-withKotlin.xml">org.jetbrains.kotlin
